@@ -2,6 +2,10 @@
 0.0.6
 ========================
 
+- unified debug and release mode
+	- they use monitoring files
+	- monitoring can be disabled via `options.watcher = false` in the start script
+
 ========================
 0.0.5
 ========================
